--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,3 +41,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 logger.securesocial=DEBUG
+
+logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
