Added Open Shift Configs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,3 +43,9 @@ logger.application=DEBUG
 logger.securesocial=DEBUG
 
 logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
+
+# Openshift id configuration
+# ~~~~~
+%openshift.application.mode=prod
+%openshift.http.port=${OPENSHIFT_INTERNAL_PORT}
+%openshift.http.address=${OPENSHIFT_INTERNAL_IP}
