--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,21 +8,21 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="SZvK@]Kaicr[Fx5>0T@Ux2/UD`G:CiRpCyoZcrla]HEfNfppkHy6ls8NSN/G4LJI"
+application.secret = "SZvK@]Kaicr[Fx5>0T@Ux2/UD`G:CiRpCyoZcrla]HEfNfppkHy6ls8NSN/G4LJI"
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs = "en"
 
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
+db.default.driver = org.h2.Driver
+db.default.url = "jdbc:h2:mem:play"
+db.default.user = sa
+db.default.password = ""
 
 # Ebeans
 ebean.default = "models.*"
@@ -33,13 +33,17 @@ ebean.default = "models.*"
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=ERROR
+logger.root = ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play = INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
-logger.securesocial=DEBUG
+logger.application = DEBUG
+logger.securesocial = DEBUG
 
-logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
+logger.scala.slick.jdbc.JdbcBackend.statement = DEBUG
+
+akka {
+  loglevel = DEBUG
+}
